--- a/ping/mainwindow.ui
+++ b/ping/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>993</width>
-    <height>821</height>
+    <height>920</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,8 +36,12 @@
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_7">
-       <item>
-        <widget class="QDateEdit" name="dateEdit"/>
+       <item alignment="Qt::AlignRight">
+        <widget class="QLabel" name="label_data_time">
+         <property name="text">
+          <string>date_time</string>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
@@ -68,21 +72,21 @@
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
-               <height>220</height>
+               <height>310</height>
               </size>
              </property>
             </spacer>
            </item>
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_3">
-             <item>
+             <item alignment="Qt::AlignRight">
               <widget class="QPushButton" name="write_button">
                <property name="text">
                 <string>Записать</string>
                </property>
               </widget>
              </item>
-             <item>
+             <item alignment="Qt::AlignRight">
               <widget class="QPushButton" name="read_button">
                <property name="text">
                 <string>Прочитать</string>
@@ -97,7 +101,7 @@
                <property name="sizeHint" stdset="0">
                 <size>
                  <width>20</width>
-                 <height>100</height>
+                 <height>250</height>
                 </size>
                </property>
               </spacer>
@@ -140,7 +144,7 @@
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
-               <height>150</height>
+               <height>40</height>
               </size>
              </property>
             </spacer>
@@ -157,27 +161,27 @@
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_2"/>
              </item>
-             <item>
-              <widget class="QRadioButton" name="base_radiobutton">
-               <property name="text">
-                <string>База</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <spacer name="verticalSpacer_4">
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>20</width>
-                 <height>40</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
             </layout>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="base_radiobutton">
+             <property name="text">
+              <string>База</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="verticalSpacer_4">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </item>
@@ -196,6 +200,9 @@
           <string>Result Ping -</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <widget class="QTextEdit" name="ping_result"/>
        </item>
       </layout>
      </widget>
@@ -224,7 +231,7 @@
    <hints>
     <hint type="sourcelabel">
      <x>912</x>
-     <y>114</y>
+     <y>105</y>
     </hint>
     <hint type="destinationlabel">
      <x>412</x>
@@ -240,11 +247,43 @@
    <hints>
     <hint type="sourcelabel">
      <x>912</x>
-     <y>116</y>
+     <y>107</y>
     </hint>
     <hint type="destinationlabel">
      <x>510</x>
-     <y>92</y>
+     <y>83</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>remove_ip_button</sender>
+   <signal>clicked()</signal>
+   <receiver>label_result</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>952</x>
+     <y>104</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>67</x>
+     <y>741</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>remove_ip_button</sender>
+   <signal>clicked()</signal>
+   <receiver>ping_result</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>952</x>
+     <y>109</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>812</x>
+     <y>837</y>
     </hint>
    </hints>
   </connection>
